syntax = "proto3";

package com.example.grpctask;
option java_multiple_files = true;
option java_outer_classname = "BookGrpc";
import "google/protobuf/empty.proto";

message Book{
  string id = 1;
  string title = 2;
  string author = 3;
  string isbn = 4;
  int32 quantity = 5;
}

service BookService {
  rpc addNewBook(CreateBookRequest) returns (Book);
  rpc getBookById(ReadBookRequest) returns (Book);
  rpc updateBook(UpdateBookRequest) returns (Book);
  rpc deleteBook(DeleteBookRequest) returns (DeleteBookResponse);
  rpc getAllBooks(google.protobuf.Empty) returns ( stream Book);
}


message CreateBookRequest {
  string title = 1;
  string author = 2;
  string isbn = 3;
  int32 quantity = 4;
}

message ReadBookRequest {
  string id = 1;
}

message UpdateBookRequest {
  string id = 1;
  Book book = 2;
}

message DeleteBookRequest {
  string id = 1;
}

message DeleteBookResponse {
  bool success = 1;
}